--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "install": "^0.8.1",
-    "leaflet": "^1.0.0-rc.2",
-    "leaflet.markercluster": "^1.0.0-rc.1.0",
-    "npm": "^3.10.5",
     "vue": "^1.0.0",
-    "vue-resource": "^0.9.3"
+    "babel-runtime": "^6.0.0",
+    "vue-resource": "^0.9.3",
+    "vue-typeahead": "^2.2.1",
+    "leaflet": "^1.0.0-rc.2",
+    "leaflet.markercluster": "^1.0.0-rc.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
