--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "bloodhound-js": "^1.2.1",
     "leaflet": "^1.0.0-rc.2",
     "leaflet.markercluster": "^1.0.0-rc.1.0",
-    "typeahead.js": "^0.11.1",
     "vue": "^1.0.0",
     "vue-resource": "^0.9.3"
   },
