--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "putianxi",
   "description": "fuck putianxi hospital",
-  "author": "putianxi@gmail.com",
+  "version": "2.0.0",
+  "author": "putianxi <putianxi@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:putianxi/putianxi.github.io.git"
+    "url": "https://github.com/putianxi/putianxi.github.io.git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "bloodhound-js": "^1.2.1",
-    "leaflet": "^1.0.0-rc.3",
-    "leaflet.markercluster": "^1.0.0-rc.1.0",
-    "vue": "^1.0.0",
-    "vue-resource": "^0.9.3"
+    "axios": "^0.17.0",
+    "bloodhound-js": "^1.2.2",
+    "leaflet": "^1.2.0",
+    "leaflet.markercluster": "^1.1.0",
+    "vue": "^2.4.4"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "cross-env": "^1.0.6",
-    "css-loader": "^0.23.0",
-    "file-loader": "^0.8.4",
-    "json-loader": "^0.5.4",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.2.1",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
